# buildout

./: .bzrignore  .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .travis.yml  2.4.cfg  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  COPYRIGHT.txt  DEVELOPERS.txt  HISTORY.rst  LICENSE-Python.txt  LICENSE.txt  MANIFEST.in  Makefile  Makefile.builds  Makefile.configure  Makefile.configure.Darwin  README.rst  README.txt  READMEFIRST.txt  SYSTEM_PYTHON_HELP.txt  bootstrap.py  buildout.cfg  ci_build.sh  dev.py  prepare.sh  pyproject.toml  setup.cfg  setup.py  test_all_pythons.cfg  todo.txt  tox.ini
.circleci/: config.yml
.travis/: docker_login_on_non_pull_requests.sh
bootstrap/: bootstrap.py  newbootstrap.py
doc/: ADD-A-NEWS-ITEM.rst  Makefile  conf.py  contents.rest  contents.rst  getting-started.rst  how-to-avoid-bootstrapping.rest  how-to-bootstrap-faster.rest  how-to-play-with-some-cool-python-package.rest  how-to-write-an-application.rest  how-tos.rest  index.rest  index.rst  make.bat  reference.rst  running-tests.rst  system-python-virtualenv-and-buildout.rest  topics.rest  tutorial.fr.txt  tutorial.txt
eggrecipe/: setup.py
news/: +0a1467ee.feature.rst  +111b0834.tests.rst  +1e01de5b.bugfix.rst  +2c40119b.bugfix.rst  +47e6c556.tests.rst  +56945474.bugfix.rst  +72d516a7.tests.rst  +744.feature.rst  +bootstrap.tests  +cc22f281.tests.rst  +compat.bugfix  +dist-not-none.bugfix  +setuptools.breaking  +split.tests  1013.bugfix  311.bugfix  314.feature.rst  35.breaking  38.breaking  38.breaking.1  38.breaking.2  38.breaking.3  38.feature.1  39.breaking  (+68 more)
(+199 files in other folders)
