[build-system]
# We still support older Pythons, and that means it is better to use an
# older setuptools to create the distributions.
requires = ["setuptools<69"]

[tool.towncrier]
filename = "CHANGES.rst"
directory = "news/"
title_format = "{version} ({project_date})"
underlines = ["-", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "develop"
name = "Development:"
showcontent = true
